[gd_scene load_steps=18 format=3 uid="uid://d0m6asdiav5p7"]

[ext_resource type="Script" path="res://Actors/Player/Scripts/2d_player.gd" id="1_oua8l"]
[ext_resource type="Script" path="res://Actors/Player/Scripts/movement_controller.gd" id="2_e27d1"]
[ext_resource type="Script" path="res://Actors/Player/Scripts/firing_controller.gd" id="3_u4ryj"]
[ext_resource type="PackedScene" uid="uid://dtnmdk7yppyf2" path="res://Ammunition/Buckshot/buckshot.tscn" id="4_bblcg"]
[ext_resource type="PackedScene" uid="uid://bgxridg8dd5ey" path="res://Ammunition/Slug/slug.tscn" id="5_6mrvq"]
[ext_resource type="Texture2D" uid="uid://cwjjpbk6tyunw" path="res://Actors/Player/Sprites/spritesheet_sh_notext.png" id="6_xqhmg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vn4vr"]
size = Vector2(25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh4ar"]
atlas = ExtResource("6_xqhmg")
region = Rect2(316, 182, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu366"]
atlas = ExtResource("6_xqhmg")
region = Rect2(474, 182, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm2m2"]
atlas = ExtResource("6_xqhmg")
region = Rect2(0, 182, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_cygah"]
atlas = ExtResource("6_xqhmg")
region = Rect2(0, 368, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_va3cr"]
atlas = ExtResource("6_xqhmg")
region = Rect2(158, 368, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug2ck"]
atlas = ExtResource("6_xqhmg")
region = Rect2(316, 368, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7h1e"]
atlas = ExtResource("6_xqhmg")
region = Rect2(474, 368, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ap7i"]
atlas = ExtResource("6_xqhmg")
region = Rect2(632, 368, 158, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxgl1"]
atlas = ExtResource("6_xqhmg")
region = Rect2(790, 368, 158, 182)

[sub_resource type="SpriteFrames" id="SpriteFrames_mpi1c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh4ar")
}],
"loop": true,
"name": &"crouch",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu366")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm2m2")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cygah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va3cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug2ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7h1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ap7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxgl1")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[node name="2DPlayer" type="CharacterBody2D" groups=["Player"]]
collision_layer = 16
script = ExtResource("1_oua8l")

[node name="MovementController" type="Node2D" parent="."]
script = ExtResource("2_e27d1")
speed = 25.0

[node name="LossOfControlTimer" type="Timer" parent="MovementController"]
one_shot = true

[node name="FiringController" type="Node2D" parent="."]
script = ExtResource("3_u4ryj")
_default_ammo = Array[PackedScene]([ExtResource("4_bblcg"), ExtResource("5_6mrvq")])

[node name="ReloadTimer" type="Timer" parent="FiringController"]
wait_time = 0.7
one_shot = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_vn4vr")

[node name="Placeholder" type="Polygon2D" parent="."]
color = Color(0, 0, 1, 1)
polygon = PackedVector2Array(-12, -49, 12, -49, 12, 0, -12, 0)

[node name="RoofProbe" type="RayCast2D" parent="."]
target_position = Vector2(0, -50)

[node name="ShotgunPivot" type="Node2D" parent="."]
position = Vector2(0, -25)

[node name="Reticle" type="Polygon2D" parent="ShotgunPivot"]
position = Vector2(24, 0)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-2.5, -2.5, 2.5, -2.5, 2.5, 2.5, -2.5, 2.5)

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -26)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_mpi1c")
animation = &"run"
frame_progress = 0.193913

[node name="Timers" type="Node2D" parent="."]

[node name="Reload" type="Timer" parent="Timers"]

[node name="Shot" type="Timer" parent="Timers"]

[connection signal="midair_shot" from="FiringController" to="." method="lose_control"]
[connection signal="timeout" from="FiringController/ReloadTimer" to="FiringController" method="_reloaded"]
